@@ -1,3 +1,7 @@
+2003-01-10    John E. Joganic <john@joganic.com>
+
+	* Changed bit macros for Graphire
+
 2003-01-09    John E. Joganic <john@joganic.com>
 
 	* Fixed Intuos and Intuos2 sizes
